manifests/25-web-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: ct-web-deployment
  labels:
    app: ct-web

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ct-web
  template:
    metadata:
      labels:
        app: ct-web
    spec:
      containers:
        - name: ct-web
          image: cherrytwist/client-web:0.1.1
          ports:
            - name: web
              containerPort: 80
