manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ct-web-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: ct-web
