manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ct-web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ct-web
          servicePort: http
